[tool.poetry]
name = "webspider"
version = "0.1.0"
description = ""
authors = ["zzh <2360860468@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.18.1"
selenium = "^4.33.0"
beautifulsoup4 = "^4.13.4"
browser-cookie3 = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
